<resources>
    <string name="app_name">My Costs</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_">Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_my_main">MyMain</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="categoryName">Название категории</string>
    <string name="categoryMaxSum">Порог</string>
    <string name="save">Сохранить</string>
    <string name="expenseComment">Комментарий</string>
    <string name="dateFormat">Дата (ДД.ММ.ГГГГ)</string>
    <string name="expenseSum">Сумма</string>
    <string name="categoryHint">Категория:</string>
</resources>
