<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoryHint" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/expenseSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expenseSum"
        android:inputType="number" />

    <EditText
        android:id="@+id/expenseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dateFormat"
        android:inputType="date" />

    <EditText
        android:id="@+id/expenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expenseComment" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>