<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categoryName" />

    <EditText
        android:id="@+id/categoryMaxSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categoryMaxSum"
        android:inputType="number"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>